--- a/projet/index-desativada/index.html
+++ b/projet/index-desativada/index.html
@@ -4,13 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<<<<<<< HEAD
-    <link rel="stylesheet" href="/projet/index/index.css" />
-
-=======
-    <link rel="stylesheet" href="/projet/index-desativada/index.css" /> 
-    
->>>>>>> 3842a2f05a2aab63d8b6879f8d3f00d8b7a7f875
+    <link rel="stylesheet" href="/index/index.css" />
     <title>CheckCut</title>
 </head>
 
@@ -19,7 +13,7 @@
         <div class="container">
             <div class="logotop">
                 <a href="#home">
-                    <img src="/projet/img/logo-site.jpeg" alt="Logo do site">
+                    <img src="/img/logo-site.jpeg" alt="Logo do site">
                 </a>
             </div>
             <nav>
@@ -53,7 +47,7 @@
             </div>
         </nav>
         <nav class="imgtop">
-            <img class="imginicio" src="/projet/img/imgcara.jpeg">
+            <img class="imginicio" src="/img/imgcara.jpeg">
         </nav>
         <nav class="twotitle">
             <h1 class="titlet2">
@@ -61,13 +55,13 @@
             </h1>
             <div class="imgCortes">
                 <div class="c1">
-                    <img class="ft1" src="/projet/img/corte (1).jpeg" alt="cort1">
+                    <img class="ft1" src="/img/corte (1).jpeg" alt="cort1">
                 </div>
                 <div class="c2">
-                    <img class="ft2" src="/projet/img/corte (2).jpeg" alt="cort2">
+                    <img class="ft2" src="/img/corte (2).jpeg" alt="cort2">
                 </div>
                 <div class="c3">
-                    <img class="ft3" src="/projet/img/corte (3).jpeg" alt="cort3">
+                    <img class="ft3" src="/img/corte (3).jpeg" alt="cort3">
                 </div>
             </div>
             <div class="descriço">
@@ -121,7 +115,7 @@
                     </div>
                 </div>
                 <div class="imglado">
-                    <img src="/projet/img/luzes (1).jpeg" alt="luzes">
+                    <img src="/img/luzes (1).jpeg" alt="luzes">
                 </div>
             </div>
         </section>
@@ -134,14 +128,10 @@
             </div>
             <div class="sobracelha">
                 <div class="imgsobra1">
-<<<<<<< HEAD
-                    <img src="/projet/img/sobracelha1.jpg" alt="sobracelho1">
-=======
-                    <img  src="/projet/img/sobracelha1.jpg" alt="sobracelho1">
->>>>>>> 3842a2f05a2aab63d8b6879f8d3f00d8b7a7f875
+                    <img src="/img/sobracelha1.jpg" alt="sobracelho1">
                 </div>
                 <div class="imgsobra2">
-                    <img src="/projet/img/sobracelha2.jpg" alt="sobracelho2">
+                    <img src="/img/sobracelha2.jpg" alt="sobracelho2">
                 </div>
             </div>
             <div class="divtext">
@@ -181,21 +171,21 @@
             </div>
             <div class="totalcolab">
                 <div class="colab1">
-                    <img src="/projet/img/colabe1.jpg" alt="fotocolab">
+                    <img src="/img/colabe1.jpg" alt="fotocolab">
                     <div class="text1">
                         <h4>nome</h4>
                         <p>descrição</p>
                     </div>
                 </div>
                 <div class="colab2">
-                    <img src="/projet/img/colabe2.jpg" alt="fotocolab">
+                    <img src="/img/colabe2.jpg" alt="fotocolab">
                     <div class="text1">
                         <h4>nome</h4>
                         <p>descrição</p>
                     </div>
                 </div>
                 <div class="colab2">
-                    <img src="/projet/img/colab3.webp" alt="fotocolab">
+                    <img src="/img/colab3.webp" alt="fotocolab">
                     <div class="text1">
                         <h4>nome</h4>
                         <p>descrição</p>
@@ -208,29 +198,17 @@
         <div class="container">
             <p>&copy; [Ano Atual] [Nome da Barbearia]. Todos os direitos reservados.</p>
             <div class="social-links">
-                <a href="#"><img src="/projet/img/logotipo-circular-do-facebook.png" alt="Facebook"></a>
-                <a href="#"><img src="/projet/img/instagram.png" alt="Instagram"></a>
-<<<<<<< HEAD
+                <a href="#"><img src="/img/logotipo-circular-do-facebook.png" alt="Facebook"></a>
+                <a href="#"><img src="/img/instagram.png" alt="Instagram"></a>
             </div>
         </div>
     </footer>
 </body>
-=======
-                </div>
-        </div>
-    </footer>
-</body>
-
-
->>>>>>> 3842a2f05a2aab63d8b6879f8d3f00d8b7a7f875
 <script src="https://www.gstatic.com/firebasejs/11.5.0/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/11.5.0/firebase-auth-compat.js"></script>
-<script src="/projet/index/index.js"></script>
-<script src="/projet/validations.js"></script>
-<script src="/projet/firebase-init.js"></script>
-<script src="/projet/js/go.js"></script>
-<<<<<<< HEAD
+<script src="/index/index.js"></script>
+<script src="/validations.js"></script>
+<script src="/firebase-init.js"></script>
+<script src="/js/go.js"></script>
 
-=======
->>>>>>> 3842a2f05a2aab63d8b6879f8d3f00d8b7a7f875
 </html>
