--- a/projet/login/login.html
+++ b/projet/login/login.html
@@ -4,21 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/projet/login/login.css">
-    <link rel="stylesheet" href="/projet/global/glob.css">
+    <link rel="stylesheet" href="/login/login.css">
+    <link rel="stylesheet" href="/global/glob.css">
     <title>Document</title>
 </head>
 
 <body>
     <header>
         <div class="topo">
-<<<<<<< HEAD
             <div id="imglogo">
-=======
-            <div id="imglogo" >
->>>>>>> 3842a2f05a2aab63d8b6879f8d3f00d8b7a7f875
-                <a href="/projet/index/index.html">
-                    <img class="ing" src="/projet/img/logo-site.jpeg" alt="logo"></a>
+                <a href="/newindex/newindex.html">
+                    <img class="ing" src="/img/logo-site.jpeg" alt="logo"></a>
             </div>
             <div class="infor">
                 <div class="semback">
@@ -76,38 +72,24 @@
         <div class="container">
             <p>&copy; [Ano Atual] [Nome da Barbearia]. Todos os direitos reservados.</p>
             <div class="social-links">
-                <a href="#"><img src="/projet/img/logotipo-circular-do-facebook.png" alt="Facebook"></a>
-                <a href="#"><img src="/projet/img/instagram.png" alt="Instagram"></a>
-<<<<<<< HEAD
-                <a href="#"><img src="/projet/img/youtube.png" alt="Instagram"></a>
-                <a href="#"><img src="/projet/img/whatsapp.png" alt="Instagram"></a>
-=======
-                <a href="#"><img src="/projet/img/youtube.png" alt="Facebook"></a>
->>>>>>> 3842a2f05a2aab63d8b6879f8d3f00d8b7a7f875
-                <a href="#"><img src="/projet/img/whatsapp.png" alt="Instagram"></a>
+                <a href="#"><img src="/img/logotipo-circular-do-facebook.png" alt="Facebook"></a>
+                <a href="#"><img src="/img/instagram.png" alt="Instagram"></a>
+                <a href="#"><img src="/img/youtube.png" alt="Instagram"></a>
+                <a href="#"><img src="/img/whatsapp.png" alt="Instagram"></a>
+                <a href="#"><img src="/img/youtube.png" alt="Facebook"></a>
+                <a href="#"><img src="/img/whatsapp.png" alt="Instagram"></a>
             </div>
         </div>
     </footer>
 </body>
-<<<<<<< HEAD
+
 <script src="https://www.gstatic.com/firebasejs/11.5.0/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/11.5.0/firebase-auth-compat.js"></script>
 <script src="../js/firebase-init.js"></script>
 
-<script src="/projet/js/loading.js"></script>
-<script src="/projet/login/login.js"></script>
-<script src="/projet/js/validations.js"></script>
-<script src="/projet/js/go.js"></script>
-=======
-  <script src="https://www.gstatic.com/firebasejs/11.5.0/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/11.5.0/firebase-auth-compat.js"></script>
-  <script src="/projet/js/firebase-init.js"></script>
-  
-<script src="/projet/js/loading.js" ></script>
-<script src="/projet/login/login.js"></script>
-<script src="/projet/js/validations.js" ></script>
-<script src="/projet/js/go.js"></script>
-
->>>>>>> 3842a2f05a2aab63d8b6879f8d3f00d8b7a7f875
+<script src="/js/loading.js"></script>
+<script src="/login/login.js"></script>
+<script src="/js/validations.js"></script>
+<script src="/js/go.js"></script>
 
 </html>
